--- a/src/load3dtiles.html
+++ b/src/load3dtiles.html
@@ -19,6 +19,7 @@
 <body>
     <div id="CesiumContainer"></div>
     <!--测量距离功能-->
+    <div id="ToolTip" style="position: absolute; background-color: floralwhite; left:0px; top:50%"></div>
     <div id="button_distance_measure" style="background-color:aquamarine ; position: absolute;top:20px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureDistance();">测量距离</div>
     <script>
         /*var esri = new Cesium.ArcGisMapServerImageryProvider({
