1.增加”清除已绘制的所有实体“功能；2.改名MeasureDistance->Measure

--- a/src/load3dtiles.html
+++ b/src/load3dtiles.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script src="../lib/Cesium/Cesium.js"></script>
     <link href="../lib/Cesium/Widgets/widgets.css" rel="stylesheet">
-    <script src="../lib/MeasureDistance.js"></script>
+    <script src="../lib/Measure.js"></script>
     <style>
         html,
         body {
@@ -21,6 +21,7 @@
     <!--测量距离功能-->
     <div id="ToolTip" style="position: absolute; background-color: floralwhite; left:0px; top:50%"></div>
     <div id="button_distance_measure" style="background-color:aquamarine ; position: absolute;top:20px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureDistance();">测量距离</div>
+    <div id="button_distance_measure" style="background-color:blueviolet ; position: absolute;top:60px; left:20px; width: 35px;height: 35px" onclick="clearEntity();">清除绘制对象</div>
     <script>
         /*var esri = new Cesium.ArcGisMapServerImageryProvider({
             url:"https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer"
