--- a/src/load3dtiles.html
+++ b/src/load3dtiles.html
@@ -39,27 +39,10 @@
                 requestWaterMask: true,
             })
         });
-
-        /*var tileset = viewer.scene.primitives.add(
-            new Cesium.Cesium3DTileset({
-                url: Cesium.IonResource.fromAssetId(96188)
-            })
-        );*/
-
-        // viewer.camera.setView({
-        //     destination: Cesium.Cartesian3.fromDegrees(118.2157, 25.0780, 3000),
-        //     orientation: {
-        //         heading: 0,
-        //         pritch: -90,
-        //         roll: 0,
-        //     }
-        // });
-
-        // tileset = viewer.scene.primitives.add(
-        //     new Cesium.Cesium3DTileset({url: "../dat/3dtiles/tileset.json"})
-        // );
       
         t3d = new Cesium.Cesium3DTileset({url: "../dat/3dtiles/tileset.json"});
+        //t3d = new Cesium.Cesium3DTileset({url: "http://39.108.251.171/dat/3dtiles/tileset.json"});
+        
         t3d.readyPromise.then(function(t3d) {
             viewer.scene.primitives.add(t3d);
             default_HeadingPitchRange = new Cesium.HeadingPitchRange(0.0, -0.5, t3d.boundingSphere.radius * 2.0);
