--- a/src/load3dtiles.html
+++ b/src/load3dtiles.html
@@ -9,6 +9,7 @@
     <link href="../lib/Cesium/Widgets/widgets.css" rel="stylesheet">
     <script src="../lib/Measure.js"></script>
     <script src="../lib/Showposition.js"></script>
+    <script src="../lib/weather.js"></script>
     <style>
         html,
         body {
@@ -20,11 +21,12 @@
 <body>
     <div id="CesiumContainer"></div>
     <!--测量距离功能-->
-    <div id="ToolTip" style="position: absolute; background-color: floralwhite; left:0px; top:50%"></div>
-    <div id="button_distance_measure" style="background-color:aquamarine ; position: absolute;top:20px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureDistance();">测量距离</div>
-    <div id="button_distance_clear" style="background-color:blueviolet ; position: absolute;top:60px; left:20px; width: 35px;height: 35px" onclick="clearEntity();">清除绘制对象</div>
-    <div id="button_polygon_measure" style="background-color:aquamarine ; position: absolute;top:20px; left:60px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureArea();">测量面积</div>
-    <div id="button_getposition" style="background-color:aquamarine ; position: absolute;top:100px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点') ;showposition();">显示位置</div>
+    <div id="ToolTip" class="button" style="position: absolute; background-color: floralwhite; left:0px; top:50%"></div>
+    <div id="button_distance_measure" class="button" style="background-color:aquamarine ; position: absolute;top:20px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureDistance();">测量距离</div>
+    <div id="button_distance_clear" class="button" style="background-color:blueviolet ; position: absolute;top:60px; left:20px; width: 35px;height: 35px" onclick="clearEntity();">清除绘制对象</div>
+    <div id="button_polygon_measure" class="button" style="background-color:aquamarine ; position: absolute;top:20px; left:60px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureArea();">测量面积</div>
+    <div id="button_getposition" class="button" style="background-color:aquamarine ; position: absolute;top:100px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点') ;showposition();">显示位置</div>
+    <div id="weather_fog" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:20px; width: 35px;height: 35px" onclick="makefog();alert('单击鼠标右键退出天气');">天气效果：雾</div>
     <script>
         /*var esri = new Cesium.ArcGisMapServerImageryProvider({
             url:"https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer"
