--- a/src/load3dtiles.html
+++ b/src/load3dtiles.html
@@ -27,6 +27,8 @@
     <div id="button_polygon_measure" class="button" style="background-color:aquamarine ; position: absolute;top:20px; left:60px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点，双击确认终点！') ;measureArea();">测量面积</div>
     <div id="button_getposition" class="button" style="background-color:aquamarine ; position: absolute;top:100px; left:20px; width: 35px;height: 35px" onclick="alert('测量已开始！单击即可选点') ;showposition();">显示位置</div>
     <div id="weather_fog" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:20px; width: 35px;height: 35px" onclick="makefog();alert('单击鼠标右键退出天气');">天气效果：雾</div>
+    <div id="weather_snow" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:60px; width: 35px;height: 35px" onclick="makesnow();alert('单击鼠标右键退出天气');">天气效果：雪</div>
+    <div id="weather_rain" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:100px; width: 35px;height: 35px" onclick="makerain();alert('单击鼠标右键退出天气');">天气效果：雨</div>
     <script>
         /*var esri = new Cesium.ArcGisMapServerImageryProvider({
             url:"https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer"
