对返回的多边形进行渲染，但前后端交互未实现

--- a/src/main/webapp/load3dtiles.html
+++ b/src/main/webapp/load3dtiles.html
@@ -30,7 +30,9 @@
     <div id="weather_fog" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:20px; width: 35px;height: 35px" onclick="makefog();alert('单击鼠标右键退出天气');">天气效果：雾</div>
     <div id="weather_snow" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:60px; width: 35px;height: 35px" onclick="makesnow();alert('单击鼠标右键退出天气');">天气效果：雪</div>
     <div id="weather_rain" class="button" style="background-color:aquamarine ; position: absolute;top:140px; left:100px; width: 35px;height: 35px" onclick="makerain();alert('单击鼠标右键退出天气');">天气效果：雨</div>
-    <div id="show_building" class="button" style="background-color:greenyellow ; position: absolute;top:180px; left:20px; width: 35px;height: 35px" onclick="showBuilding();alert('单击选中信息');">显示建筑物信息</div>
+    <div id="show_building" class="button" style="background-color:greenyellow ; position: absolute;top:180px; left:20px; width: 35px;height: 35px" onclick="showBuilding();alert('双击选中信息');">显示建筑物信息</div>
+    <!--用来临时存放建筑数据-->
+    <div id="tmp" style="display:none">0</div>
     <script>
         /*var esri = new Cesium.ArcGisMapServerImageryProvider({
             url:"https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer"
