--- a/src/main/webapp/polygon.html
+++ b/src/main/webapp/polygon.html
@@ -39,6 +39,15 @@
             <el-button type="primary" @click="onSubmit">查询</el-button>
         </el-form-item>
     </el-form>
+
+    <!--按钮-->
+
+    <el-row>
+
+        <el-button type="danger" plain @click="deleteByIds">批量删除</el-button>
+        <el-button type="primary" plain @click="dialogVisible = true">新增</el-button>
+
+    </el-row>
     <!--添加数据对话框表单-->
     <el-dialog
             title="编辑要素"
