基本实现显示建筑功能

--- a/src/main/webapp/load3dtiles.html
+++ b/src/main/webapp/load3dtiles.html
@@ -10,6 +10,8 @@
     <script src="./js/Measure.js"></script>
     <script src="./js/Showposition.js"></script>
     <script src="./js/weather.js"></script>
+
+    <script src="js/axios-0.18.0.js"></script>
     <script src="./js/showBuilding.js"></script>
     <style>
         html,
